apps/mediacenter/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: sonarr
        - mountPath: /downloads
          name: downloads
        - mountPath: /series
          name: series
      volumes:
      - name: sonarr
        persistentVolumeClaim:
          claimName: sonarr
      - name: series
        persistentVolumeClaim:
          claimName: series
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.home
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: sonarr
            port:
              number: 8989
